--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			body {
 				background-color: rgb(25, 25, 25);
                 color: white;
-                font-family: "Trebuchet MS";
+                font-family: 'Trebuchet MS';
 			}
 
 			#main {
@@ -26,7 +26,7 @@
 			}
 
 			#g-recaptcha {
-				margin-top: 8px;
+				margin-top: 10px;
 			}
 
 			#info {
