--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
 
 		<script>
-			const URL = 'https://shoux-servers2.herokuapp.com/roblox-vancouver-database/';
+			const URL = 'https://shoux-servers.herokuapp.com/roblox-vancouver-database/';
 			const SOCKET_URL = 'wss://shoux-servers2.herokuapp.com/roblox-vancouver-database/';
 
 			const usernameInput = document.getElementById('usernameInput');
